# plex-invite-project

./: README.md  app.py  pyproject.toml  requirements.txt
backend/plex_invite/: __init__.py
backend/plex_invite/config/: __init__.py  loader.py  schema.py
backend/plex_invite/core/: auth.py  database.py
backend/plex_invite/core/access_keys/: __init__.py  generator.py  manager.py
backend/plex_invite/core/database/: __init__.py  config.py  models.py
backend/plex_invite/core/plex/: __init__.py  config.py  connection.py  library.py
backend/plex_invite/core/smtp/: __init__.py  config.py  sender.py
backend/plex_invite/core/users/: __init__.py  manager.py  models.py
backend/plex_invite/onboarding/: __init__.py  manager.py  models.py
backend/plex_invite/routes/: shared.py
backend/plex_invite/routes/admin/: auth.py
backend/plex_invite/routes/admin/onboarding/: routes.py
backend/plex_invite/routes/admin/panel/: routes.py
backend/plex_invite/routes/admin/smtp/: routes.py
backend/plex_invite/routes/admin/users/: routes.py
backend/plex_invite/routes/keys/: routes.py
backend/plex_invite/routes/setup/: routes.py
database/: init_db.py
database/migrations/: alembic.ini  env.py
database/migrations/versions/: 03e64b801903_initial_migration.py  50f67af6ca23_add_setup_complete_column.py  d093ba44db3a_add_setupstate_model.py
frontend/static/assets/css/: base.css  components.css
frontend/templates/: admin.html  admin_keys.html  admin_onboarding.html  admin_smtp.html  admin_users.html  base.html  index.html  setup.html
(+14 files in other folders)
